@@ -21,6 +21,7 @@ import qualified Command.Move
 import qualified Command.Copy
 import qualified Command.Get
 import qualified Command.LookupKey
+import qualified Command.ExamineKey
 import qualified Command.FromKey
 import qualified Command.DropKey
 import qualified Command.TransferKey
@@ -126,6 +127,7 @@ cmds = concat
 	, Command.Ungroup.def
 	, Command.Vicfg.def
 	, Command.LookupKey.def
+	, Command.ExamineKey.def
 	, Command.FromKey.def
 	, Command.DropKey.def
 	, Command.TransferKey.def
