@@ -1,7 +1,9 @@
 git-annex (5.20131214) UNRELEASED; urgency=low
 
   * Fix test suite to cover lock --force change.
-  * Add plumbing-level lookupkey command.
+  * Add plumbing-level lookupkey and examinekey commands.
+  * find --format: Added hashdirlower, hashdirmixed, keyname, and mtime
+    format variables.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Dec 2013 13:32:49 -0400
 
